--- a/src/Estilos/Cover.css
+++ b/src/Estilos/Cover.css
@@ -1,4 +1,5 @@
-.Fondo {
+.Cover {
+    margin-top: -70px ;
     background-image: url('/public/fondo.jpg');
     background-size: cover;
     width: 100vw;
