--- a/src/Estilos/First_sentence.css
+++ b/src/Estilos/First_sentence.css
@@ -1,5 +1,9 @@
 .First_sentence{
-    margin-top: 50vh;
+    margin-top: 50%;
+    margin-left: 25%;
+    font-size: 50px;
+    font-style: italic;
     text-align: center;
+
     color: aqua;
 }
